[workspace]

resolver = "2"
members = [
    "contracts/*", 
    "web/container",
    "locutus/crates/*"
]

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 's'
debug = false
codegen-units = 1
panic = 'abort'
strip = true

[workspace.dependencies]
locutus-stdlib = {path = "locutus/crates/locutus-stdlib"}
chacha20poly1305 = "0.10"
either = "1.8"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_with = "2"
serde_json = "1"
rand = { version = "0.8" }


#[target.wasm32-unknown-unknown]
# rustflags = ["-C", "link-arg=--import-memory"]
